<resources>
    <string name="app_name">Real Estate Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_media">Media</string>
    <string name="title_description">Description</string>
    <string name="title_surface">Surface</string>
    <string name="title_number_of_rooms">Rooms</string>
    <string name="title_number_of_bathrooms">Bathrooms</string>
    <string name="title_number_of_bedrooms">Bedrooms</string>
    <string name="title_location">Location</string>
    <string name="label">Min</string>
    <string name="content_description_end_icon">Minimum price</string>
    <string name="loremIpsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget bibendum velit. Nam sem purus, commodo nec bibendum sed, tincidunt non elit. Vestibulum vel diam sit amet elit gravida elementum. Proin ac mi quis tellus luctus pretium ac ut quam. Phasellus congue ante risus, quis scelerisque dolor ullamcorper vel. Donec ultrices velit ac eleifend porttitor. Nunc magna ipsum, laoreet id posuere vel, hendrerit non elit. Nullam tincidunt mauris nisl, sit amet mollis augue tempor at. Cras vel metus vel ligula porta viverra ut in ante. Donec ultrices turpis vitae ultricies fringilla. Fusce non ultricies diam. Maecenas iaculis placerat ligula, non consectetur leo dictum a. Aliquam eget arcu nisi. Sed sollicitudin elit ut iaculis condimentum. "</string>
    <string name="title_type">Type</string>
    <string name="title_city">City</string>
    <string name="title_price">Price</string>
    <string name="title_street">Street</string>
    <string name="action_save">Save Form</string>
    <string name="title_country">Country</string>
    <string name="action_pick_images">Pick Images</string>
    <string name="action_edit">Edit</string>
    <string name="edit_status">Vendu</string>
    <string name="title_agent">Agent</string>
    <string name="title_nearest">Nearest</string>
    <string name="search_title_location">Où ?</string>
    <string name="action_search">Action search</string>
    <string name="search_title_price">Price</string>
    <string name="search_title_type">Type</string>
    <string name="search_house">House</string>
    <string name="search_title_period">Date</string>
    <string name="search_status">Vendu</string>
    <string name="search_title_surface">Surface</string>
    <string name="search_title_nearest">nearest</string>
    <string name="search_title_photos">Photos</string>
    <string name="un">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five_and_more">5+</string>
    <string name="search_flat">Flat</string>
    <string name="search_castle">Castle</string>
    <string name="search_loft">Loft</string>
    <string name="search_building">Building</string>
    <string name="search_land">Land</string>
    <string name="photo_title">Add Title</string>
    <string name="add_a_photo_from_camera">ADD A PHOTO FROM CAMERA</string>
    <string name="add_a_photo_from_gallery">ADD A PHOTO FROM GALLERY</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">ADD</string>
    <string name="cancel_current_search">Cancel current search</string>
    <string name="empty_text" />
    <string name="default_photo">default_photo</string>
    <string name="desc_btn_add_photo">Desc btn add photo</string>
    <string name="calculate">Calculate</string>
    <string name="loan_contribution">Contribution</string>
    <string name="loan_years">Years</string>
    <string name="loan_rate">Rate</string>
    <string name="loan_title">Real Estate Loan</string>
    <string name="title_extras">Additional address</string>
    <string name="title_code">Code</string>

    <string-array name="periods">
        <item> </item>
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
        <item>years</item>
    </string-array>

</resources>
