<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo_preview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/ic_baseline_wallpaper_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_photo_preview_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/photo_title"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_preview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_photo_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/action_open_camera"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_a_photo_from_camera"
        app:icon="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_photo_preview_layout" />

    <Button
        android:id="@+id/action_open_gallery"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_a_photo_from_gallery"
        app:icon="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_open_camera" />

    <Button
        android:id="@+id/action_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/action_cancel"
        app:icon="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toStartOf="@+id/action_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_open_gallery" />

    <Button
        android:id="@+id/action_ok"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/action_add"
        app:icon="@drawable/ic_baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/action_cancel"
        app:layout_constraintTop_toTopOf="@+id/action_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>